# kidex

./: .gitignore  Cargo.nix  Cargo.toml  README.md  flake.nix
kidex/: Cargo.toml
kidex-client/: Cargo.toml
kidex-client/src/: main.rs
kidex-common/: Cargo.toml
kidex-common/src/: lib.rs  query.rs
kidex/src/: index.rs  main.rs  query.rs
nix/modules/: home-manager.nix
