[package]
name = "kidex-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
env_logger = "0.10.0"
kidex-common = { path = "../kidex-common", features = ["util"] }
log = "0.4.17"
serde_json = "1.0.93"
