[package]
name = "kidex-common"
version = "0.1.0"
edition = "2021"
description = "Helper library for interacting with Kidex"
readme = "../README.md"
homepage = "https://github.com/Kirottu/kidex"
repository = "https://github.com/Kirottu/kidex"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.93", optional = true }

[features]
util = ["dep:serde_json"]
