[package]
name = "kidex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
inotify = "0.10.0"
log = "0.4.17"
ron = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["macros", "sync", "time", "io-util", "rt-multi-thread"] }
kidex-common = {path = "../kidex-common"}
signal-hook = "0.3.15"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
futures = "0.3.26"
anyhow = "1.0.69"
globber = "0.1.3"
expanduser = "1.2.2"
